@@ -57,6 +57,12 @@
     <ClCompile Include="..\..\..\contrib\zstd\common\error_private.c">
       <Filter>zstd\common</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\common\System.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\common\TaskDispatch.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\common\RawImportMeta.hpp">
@@ -105,6 +111,12 @@
       <Filter>zstd\common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\common\mmap.hpp">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\common\System.hpp">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\common\TaskDispatch.hpp">
       <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
